--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.1.0
 homepage: https://github.com/koukibadr/Shaped-Bottom-Bar
 
 environment:
-  sdk: ">=2.12.0 <=3.2.0"
+  sdk: ">=2.12.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
